# lsp4agents

./: .gitignore  CLAUDE.md  README.md  comparison.md  consumer.py  documentation.md  lsp_raw_client.py  lsp_tool_mls.py  planning.md  pyproject.toml  research.md  sample.py  test_apply.py
lsp-tool-py/: README.md  lsp_tool.py
lsp-tool-rs/: Cargo.toml
lsp-tool-rs/src/: apply.rs  client.rs  main.rs
lsp4a/: Cargo.toml
lsp4a/src/: apply.rs  client.rs  main.rs  resolve.rs  transport.rs
lsp4a/tests/: cli.rs  rename.rs
