[package]
name = "lsp-tool"
version = "0.1.0"
edition = "2021"
description = "Hand-rolled LSP-backed rename/references/diagnostics CLI (v0, drives ty)"

[[bin]]
name = "lsp-tool"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
